# EE6222_threshold-and-thinning

./: CMakeLists.txt  assignment.cpp  assignment.h  get_histograph.cpp  otsu.cpp  threshold.cpp  two_steps_thinning.cpp
